--- a/resources/translations/blogs/blogs.pot
+++ b/resources/translations/blogs/blogs.pot
@@ -5,6 +5,6 @@ msgstr ""
 "Language: en_GB\n"
 "Plural-Forms: nplurals=3; plural=(n==0 ? 0 : n==1 ? 1 : 2)\n"
 
-#. English: "English.".
-msgid "language"
+#. English: "en".
+msgid "language_code"
 msgstr ""
