I dont think you realise how much fun the v4 translations are

--- a/translations/blogs/enart.po
+++ b/translations/blogs/enart.po
@@ -7,5 +7,6 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n==0 ? 0 : n==1 ? 1 : 2)\n"
 
 #. English: "en".
+#. Note: This file is a second (slightly different) english translation. Yep. You heard me.
 msgid "language_code"
 msgstr "en-GB"
