--- a/translations/blogs/blogs.pot
+++ b/translations/blogs/blogs.pot
@@ -1,8 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: rmp\\translate blogs v1.0"
+"Project-Id-Version: bbc blogs v5\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Language: en_GB\n"
 "Plural-Forms: nplurals=3; plural=(n==0 ? 0 : n==1 ? 1 : 2)\n"
 
 #. English: "en".
