--- a/translations/blogs/cy.po
+++ b/translations/blogs/cy.po
@@ -1,3 +1,11 @@
+msgid ""
+msgstr ""
+"Project-Id-Version: bbc blogs v5\n"
+"Language: cy_GB\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=3; plural=(n==0 ? 0 : n==1 ? 1 : 2)\n"
+
 #. English: "en".
 msgid "language_code"
 msgstr "cy"
