Adding template for translations

--- a/translations/blogs/blogs.pot
+++ b/translations/blogs/blogs.pot
@@ -4,6 +4,328 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Plural-Forms: nplurals=3; plural=(n==0 ? 0 : n==1 ? 1 : 2)\n"
 
+#. English: "This video content is not available, due to a temporary problem.".
+msgid "asset_error_without_java"
+msgstr ""
+
+#. English: "There are no posts by this author".
+msgid "author_no_posts"
+msgstr ""
+
+#. English (no items): "0 blogs".
+#. English (one item): "1 blog".
+#. English (2+ items): "%count% blogs".
+msgid "blog"
+msgid_plural "blog %count%"
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+
+#. English (no items): "0 articles".
+#. English (one item): "1 article".
+#. English (2+ items): "%count% articles".
+msgid "blog_article_count_archive"
+msgid_plural "blog_article_count_archive %count%"
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+
+#. English: "There are no posts in this blog".
+msgid "blog_no_posts"
+msgstr ""
+
+#. English (no items): "Blog post in total 0".
+#. English (one item): "Blog post in total 1".
+#. English (2+ items): "Blog posts in total  %count%".
+msgid "blog_post_count_author"
+msgid_plural "blog_post_count_author %count%"
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+
+#. English (no items): "0 posts about %tag% on this blog".
+#. English (one item): "1 post about %tag% on this blog".
+#. English (2+ items): "%count% posts about %tag% on this blog".
+msgid "blog_post_count_tag"
+msgid_plural "blog_post_count_tag %count% %tag%"
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+
+#. English: "Comments are temporarily unavailable due to a technical fault. Please try later.".
+msgid "error_comments"
+msgstr ""
+
+#. English: "Your browser doesn't support HTML5 media.".
+msgid "error_no_media"
+msgstr ""
+
+#. English: "Feed".
+msgid "feed"
+msgstr ""
+
+#. English: "Find us on %1".
+msgid "find_us_on_facebook"
+msgstr ""
+
+#. English: "Follow %1 on Twitter".
+msgid "follow_us_on_twitter"
+msgstr ""
+
+#. English: "Blog posts by year and month".
+msgid "header_archive_month"
+msgstr ""
+
+#. English: "Authors".
+msgid "header_author_all"
+msgstr ""
+
+#. English: "Latest post".
+msgid "header_author_latest_post"
+msgstr ""
+
+#. English: "Name".
+msgid "header_author_name"
+msgstr ""
+
+#. English: "Blogs A-Z".
+msgid "header_az"
+msgstr ""
+
+#. English: "More Posts".
+msgid "header_more_posts"
+msgstr ""
+
+#. English: "Next".
+msgid "header_next"
+msgstr ""
+
+#. English: "Posts".
+msgid "header_posts"
+msgstr ""
+
+#. English: "Previous".
+msgid "header_previous"
+msgstr ""
+
+#. English: "Share this page".
+msgid "header_share_page"
+msgstr ""
+
+#. English: "Tagged with".
+msgid "header_tag_ind"
+msgstr ""
+
+#. English: "Tags".
+msgid "header_tag_list"
+msgstr ""
+
+#. English: "This image content is not available, due to a temporary problem".
+msgid "image_notloading"
+msgstr ""
+
+#. English: "Page not found".
+msgid "internal_error"
+msgstr ""
+
+#. English: "Please check the address and try again".
+msgid "internal_error_note"
+msgstr ""
+
+#. English: "Please check the address and try again".
+msgid "internal_error_title"
+msgstr ""
+
+#. English: "You must enable javascript to play content".
+msgid "javascript_required"
+msgstr ""
+
+#. English: "en-GB".
+msgid "language_barlesque"
+msgstr ""
+
 #. English: "en".
 msgid "language_code"
+msgstr ""
+
+#. English: "en_GB".
+msgid "language_locale"
+msgstr ""
+
+#. English: "A - Z".
+msgid "link_az"
+msgstr ""
+
+#. English: "Comments".
+msgid "link_comments"
+msgstr ""
+
+#. English: "View the comments for this blog".
+msgid "link_comments_standalone"
+msgstr ""
+
+#. English: "Home".
+msgid "link_home"
+msgstr ""
+
+#. English: "Next".
+msgid "link_next"
+msgstr ""
+
+#. English: "Previous".
+msgid "link_previous"
+msgstr ""
+
+#. English: "Read more".
+msgid "link_read_more"
+msgstr ""
+
+#. English: "See all authors".
+msgid "link_see_all_authors"
+msgstr ""
+
+#. English: "See all posts".
+msgid "link_see_all_posts"
+msgstr ""
+
+#. English: "See all tags".
+msgid "link_see_all_tags"
+msgstr ""
+
+#. English: "Top 20".
+msgid "link_top_20"
+msgstr ""
+
+#. English: "About this Blog".
+msgid "module_about_header"
+msgstr ""
+
+#. English: "Explore all BBC blogs".
+msgid "module_about_link_all_blogs"
+msgstr ""
+
+#. English: "Blog home".
+msgid "module_about_link_home"
+msgstr ""
+
+#. English: "Featured Post".
+msgid "module_featured_post_header"
+msgstr ""
+
+#. English: "Recently Commented".
+msgid "module_mostpopular_header"
+msgstr ""
+
+#. English: "Commented".
+msgid "module_mostpopular_tab_commented"
+msgstr ""
+
+#. English: "Stay updated with the latest posts from the blog".
+msgid "module_updates_content"
+msgstr ""
+
+#. English: "Blog Updates".
+msgid "module_updates_header"
+msgstr ""
+
+#. English: "Subscribe to the blog using".
+msgid "module_updates_header_feed"
+msgstr ""
+
+#. English: "Subscribe to this tag using".
+msgid "module_updates_header_feed_tags"
+msgstr ""
+
+#. English: "ATOM feed".
+msgid "module_updates_link_atom"
+msgstr ""
+
+#. English: "Subscribe to this Tag (ATOM)".
+msgid "module_updates_link_atom_tag"
+msgstr ""
+
+#. English: "What are feeds?".
+msgid "module_updates_link_feeds"
+msgstr ""
+
+#. English: "RSS feed".
+msgid "module_updates_link_rss"
+msgstr ""
+
+#. English: "Subscribe to this Tag (RSS)".
+msgid "module_updates_link_rss_tag"
+msgstr ""
+
+#. English: "There are no posts in this month".
+msgid "month_no_posts"
+msgstr ""
+
+#. English: "There are no posts".
+msgid "no_posts"
+msgstr ""
+
+#. English: "There are no results".
+msgid "no_results"
+msgstr ""
+
+#. English: "Page not found".
+msgid "page_not_found"
+msgstr ""
+
+#. English: "Please check the address and try again".
+msgid "page_not_found_note"
+msgstr ""
+
+#. English: "Sorry, that page was not found".
+msgid "page_not_found_title"
+msgstr ""
+
+#. English: "All posts for".
+msgid "page_title_archive_month"
+msgstr ""
+
+#. English: "All Authors".
+msgid "page_title_author_all"
+msgstr ""
+
+#. English: "Authors beginning with the letter %1".
+#. %1 is a variable, which may contain letters.
+msgid "page_title_author_az"
+msgstr ""
+
+#. English: "Author".
+msgid "page_title_author_ind"
+msgstr ""
+
+#. English: "Blogs".
+msgid "page_title_blogs"
+msgstr ""
+
+#. English: "Tags Top 20".
+msgid "page_title_tag_cloud"
+msgstr ""
+
+#. English: "Tag".
+msgid "page_title_tag_ind"
+msgstr ""
+
+#. English: "All tags".
+msgid "page_title_tag_list"
+msgstr ""
+
+#. English (no items): "0 posts".
+#. English (one item): "1 post".
+#. English (2+ items): "%count% posts".
+msgid "post"
+msgid_plural "post %count%"
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+
+#. English: "See all posts about".
+msgid "see_all_posts_about"
+msgstr ""
+
+#. English: "Tagged with".
+msgid "tagged_with"
 msgstr ""
